force-app/main/default/objects/ApexLog__c/ApexLog__c.object-meta.xml
<CustomObject>
    <label>ApexLog</label>
    <nameField>
        <label>ApexLog Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>