force-app/main/default/objects/ApexLog__c/fields/DateLog__c.field-meta.xml
<CustomField>
    <fullName>DateLog__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>DateLog</label>
    <type>Date</type>
</CustomField>