force-app/main/default/objects/ApexLog__c/fields/LevelLog__c.field-meta.xml
<CustomField>
    <fullName>LevelLog__c</fullName>
    <label>LevelLog</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>