force-app/main/default/objects/ApexLog__c/fields/LineLog__c.field-meta.xml
<CustomField>
    <fullName>LineLog__c</fullName>
    <label>LineLog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>