force-app/main/default/objects/ApexLog__c/fields/MessageLog__c.field-meta.xml
<CustomField>
    <fullName>MessageLog__c</fullName>
    <label>MessageLog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>